--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -1,5 +1,4 @@
-Description: Wordpress application stack
-
+Description: MemeGen application stack
 
 Parameters:
 
@@ -17,7 +16,8 @@ Parameters:
     ConstraintDescription: Value must be the name of an existing EC2 KeyPair.
   AmiParam:
     Type: String
-    Default: "ami-8fd760f6" 
+    Default: "ami-82f4dae7" # US-EAST-2
+    #Default: "ami-8fd760f6" # EU-WEST-1
     Description: Ami Id to run the application.
   Ec2InstanceTypeParam:
     Type: String
@@ -29,37 +29,15 @@ Parameters:
       - t2.small
   DomainNameParam:
     Type: String
-    Default: "gluo.cloud"
-    Description: hostname to create subdomain
+    Default: "gluo.io" # US-EAST-2
+    #Default: "gluo.cloud" # EU-WEST-1
+    Description: Hostname to create Route53 subdomain
   VpcIdParam:
     Type: AWS::EC2::VPC::Id
     Description: The ID of the VPC
   PublicSubnetsParam:
     Type: List<AWS::EC2::Subnet::Id>
     Description: Select the different public subnet IDs
-  RDSUsernameParam:
-    Type: String
-    Default: "wordpress" # Temp Username admin
-    Description: Master username for the rds instance 
-  RDSPasswordParam:
-    Type: String
-    Default: "Cloud247" # Temp Password Admin
-    NoEcho: true
-    MinLength: 1
-    MaxLength: 41
-    AllowedPattern: ^[a-zA-Z0-9]*$
-    Description: Master password for the rds instance 
-  RDSInstanceClassParam:
-    Type: String
-    Default: "db.t2.micro" # Temp Username admin
-    Description: InstanceClass of the launched RDS instance
-    AllowedValues:
-      - db.t2.micro
-      - db.t2.small
-  RDSAllocatedStorageParam:
-    Type: String
-    Default: "20"
-    Description: Storage available to the RDS instance
 
 Metadata:
   AWS::CloudFormation::Interface:
@@ -74,77 +52,29 @@ Metadata:
           - DomainNameParam
           - VpcIdParam
           - PublicSubnetsParam
-          - RDSUsernameParam
-          - RDSPasswordParam
-          - RDSInstanceClassParam
-          - RDSAllocatedStorageParam
 
 Resources:
 
-  # RDS - define Database
-
-    # Add to DB-subnet-group
-
-  rdsSubnetGroup:
-    Type: AWS::RDS::DBSubnetGroup
-    Properties:
-      DBSubnetGroupDescription: Subnets in which the RDS will be available.
-      SubnetIds: !Ref PublicSubnetsParam
-
-    # SecurityGroup
-
-  rdsSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: "3306/TCP in from specific security group"
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: "3306"
-          ToPort: "3306"
-          CidrIp: 0.0.0.0/0
-      VpcId: !Ref VpcIdParam
-      Tags: 
-        - Key: Name
-          Value: !Sub "CloudFormation-${AWS::StackName}-RDSSecurityGroup"
-
-    # DB Parameter Group
-
-  rdsParameterGroup:
-    Type: AWS::RDS::DBParameterGroup
-    Properties:
-      Description: Database parameters
-      Family: MySQL5.6
-      Parameters:
-        character_set_server: utf8
-        collation_server: utf8_bin
-        #default_storage_engine: InnoDB # Cannot be changed whit CloudFormation
-        max_allowed_packet: "300000000" # >256M
-        innodb_log_file_size: "2100000000" # >2GB
-        tx_isolation: READ-COMMITTED
-      Tags: 
-        - Key: Name
-          Value: !Sub "CloudFormation-${AWS::StackName}-RDSParameterGroup"
-
-    # DB Instance
-
-  rdsInstance:
-    Type: AWS::RDS::DBInstance
-    Properties:
-      MasterUsername: !Ref RDSUsernameParam
-      MasterUserPassword: !Ref RDSPasswordParam
-      PubliclyAccessible: false
-      Engine: MySQL
-      EngineVersion: "5.6"
-      DBInstanceClass: !Ref RDSInstanceClassParam
-      StorageType: gp2
-      AllocatedStorage: !Ref RDSAllocatedStorageParam
-      DBSubnetGroupName: !Ref rdsSubnetGroup
-      DBParameterGroupName: !Ref rdsParameterGroup
-      VPCSecurityGroups:
-        - !Ref rdsSecurityGroup
-      Tags: 
-        - Key: Name
-          Value: !Sub "CloudFormation-${AWS::StackName}-RDS"
+  # DynamoDB table
+  
+  appDynamodbTable: 
+    Type: "AWS::DynamoDB::Table"
+    Properties: 
+      TableName: !Sub "cloudformation-images-${StudentIdParam}"
+      AttributeDefinitions: 
+        - 
+          AttributeName: "id"
+          AttributeType: "N"
+      KeySchema: 
+        - 
+          AttributeName: "id"
+          KeyType: "HASH"
+      ProvisionedThroughput: 
+        ReadCapacityUnits: "5"
+        WriteCapacityUnits: "5"
+      Tags:
+        - Key: "Name"
+          Value: !Sub "cloudformation-images-${StudentIdParam}"
 
   # S3 bucket 
 
@@ -161,6 +91,7 @@ Resources:
     # Needs permission to push: S3, CloudWatch
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Sub "Cloudformation-${AWS::StackName}-Role"
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -172,7 +103,7 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
-        - PolicyName: !Sub "CloudFormation-${AWS::StackName}-RolePolicyDocument"
+        - PolicyName: !Sub "CloudFormation-${AWS::StackName}-Policies"
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -183,6 +114,11 @@ Resources:
                   - "s3:List*"
                   - "s3:PutObject"
                   - "s3:PutObjectAcl"
+                Resource: "*"
+              - Sid: 'DynamoDBAccess'
+                Effect: "Allow"
+                Action:
+                  - "dynamodb:*"
                 Resource: "*"
 
   cfnInstanceProfile:
@@ -251,12 +187,12 @@ Resources:
 
   appAutoscalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
-    # CreationPolicy is a 10 minute pause, waiting for a cfn-signal by the UserData of the Launch Configuration.
+    # CreationPolicy is a 20 minute pause, waiting for a cfn-signal by the UserData of the Launch Configuration.
     # Meaning it does not continue unless the launch configuration of at least one of the instances has started.
     CreationPolicy:
       ResourceSignal:
         Count: "1"
-        Timeout: 'PT10M'
+        Timeout: 'PT20M'
     Properties:
       HealthCheckType: EC2
       LaunchConfigurationName: !Ref appLaunchConfiguration
@@ -282,138 +218,110 @@ Resources:
             - ExecuteScripts
         ExecuteScripts:
           files:
-            "/root/InstallAWSCLI.sh":
+            "/root/InstallMemeGen-php-CF.sh":
               content: !Sub |
                 #!/bin/bash
+                # Installs MemeGen, modified to be used for cloudformation. 
 
-                # Install Python
-                apt install python wget -y
-                # Download Pip
-                wget https://bootstrap.pypa.io/get-pip.py
-                # Install Pip
-                python get-pip.py
-                # Remove Pip file
-                rm get-pip.py
-                # Install AWSCLI with pip
-                pip install awscli
+                YOURID=$1
+                REGION=$2
 
-                # Completed.
-                echo -e "AWSCLI sucessfully installed."
-              mode: '000755'
-              owner: root
-              group: root
-            "/root/InstallS3FS.sh":
-              content: !Sub |
-                #!/bin/bash
-                # Installs S3FS and mounts a bucket on /s3. Make sure you've got privileges with the user you execute this as.
-
-                # Install packages
-                  apt-get install -y automake autotools-dev fuse g++ git libcurl4-gnutls-dev libfuse-dev libssl-dev libxml2-dev make pkg-config
-
-                # Clone the s3fs git repo
-                  cd ~
-                  # More info on the S3FS project here: https://github.com/s3fs-fuse/s3fs-fuse/wiki/Fuse-Over-Amazon
-                  git clone https://github.com/s3fs-fuse/s3fs-fuse.git
-
-                # Install s3fs
-                  cd s3fs-fuse/
-                  ./autogen.sh && ./configure && make && make install
-
-                # Go back to home dir
-                  cd ~
-
-                # Please go to /s3
-                  echo -e "S3FS successfully installed."
-              mode: '000755'
-              owner: root
-              group: root
-            "/root/InstallUploadSyncS3.sh":
-              content: !Sub |
-                #!/bin/bash
-                # Install of packages, upload of Wordpress to bucket, sync with bucket to local fs and Configuration of Apache. 
-                # Make sure you've got privileges with the user you execute this as.
-
-                # Param values
-                BUCKET=$1
-                HOST=$2
-                USER=$3
-                PASS=$4
-
-                if [[ ! $BUCKET || ! $HOST || ! $USER || ! $PASS ]]; then
-                    echo -e "Some parameters were not filled in!" 
-                    exit 1
-                else
-                    echo -e "Bucket name parameter received ($BUCKET). Continuing..."
-                fi
-
-                # Install packages and start services
-                  # Make sure MySQL server does not ask for a password
+                # Set a settings for non interactive mode
                   export DEBIAN_FRONTEND=noninteractive
-                  export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/snap/bin
-                  # dpkg fix
-                  dpkg --configure -a
-                  # Install packages
-                  apt-get install -y apache2 mysql-server php7.0 libapache2-mod-php7.0 php7.0-mysql wget unzip
+                  export PATH=$PATH:/usr/local/sbin/
+                  export PATH=$PATH:/usr/sbin/
+                  export PATH=$PATH:/sbin
+
+                # Install packages (apache, mongo, php, python and other useful packages)
+                  # Mongodb repo commands + apt refresh
+                  apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2930ADAE8CAF5059EE73BB4B58712A2291FA4AD5 && echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.6 multiverse" >> /etc/apt/sources.list.d/mongodb-org-3.6.list;
+                  apt-get update -y;
+                  # Install all
+                  apt-get install -y apache2 mongodb-org mongodb-org-server php7.0 php7.0-dev libapache2-mod-php7.0 php-pear pkg-config libssl-dev libsslcommon2-dev python-minimal python-pip imagemagick composer wget unzip;
+                  # Mongodb config
+                  pecl install mongodb
+                  echo "extension=mongodb.so" >> /etc/php/7.0/apache2/php.ini && echo "extension=mongodb.so" >> /etc/php/7.0/cli/php.ini
+
+                # Pip install meme creation packages and awscli for syncing s3 to local fs
+                  pip install --upgrade pip
+                  pip install wand awscli
+                  
+                # Enable and start services  
                   # Enable
-                  systemctl enable mysql apache2
+                  systemctl enable mongod apache2
                   # Start
-                  systemctl start mysql apache2
-                  
-                # Make sure the wordpress database exists
-                  mysql -u $USER -h $HOST -P 3306 -e "create database wordpress;" --password=$PASS || true
+                  systemctl start mongod apache2
+                  # Wait for mongod start
+                  until nc -z localhost 27017
+                  do
+                      echo 'Sleep till MongoDB is running.' | systemd-cat
+                      sleep 2
+                  done
 
-                # Download and install wordpress
-                  # Change to httpd folder
-                  cd /var/www/html
-                  # Download wordpress
-                  wget https://wordpress.org/latest.zip
-                  # Unzip file
-                  unzip latest.zip
-                  # Change owner to httpd user
-                  chgrp www-data wordpress/
-                  # Give privileges and make sure it's undeletable by non-users (I think)
-                  chmod 3770 wordpress/
-                  # Set all files under wordpress/ to have group execution rights
-                  chmod -R g+w wordpress/
+                # Configure Mongodb
+                  # Create mongo student root user for memegen db
+                  echo '
+                    use memegen
+                    db.createUser(
+                       {
+                         user: "student",
+                         pwd: "Cloud247",
+                         roles: [ { role: "root", db: "admin" } ]
+                       }
+                    )
+                  ' | mongo
+                  # Enable user credentials security
+                  echo "security:" >> /etc/mongod.conf && echo "  authorization: enabled" >> /etc/mongod.conf
+                  # Restart the mongodb service
+                  systemctl restart mongod
+                    
+                # Download and install MemeGen
+                  # Git clone the repository in your home directory
+                  git clone https://github.com/gluobe/infrastructure-2.0-workshop.git ~/infra-workshop
+                  # Clone the application out of the repo to the web folder.
+                  mv ~/infra-workshop/Application/memegen-php/* /var/www/html/
+                  # Set permissions for apache
+                  chown -R www-data:www-data /var/www/html/meme-generator/
                   
-                # Upload to S3
-                  aws s3 sync wordpress/ s3://$BUCKET --region eu-west-1
-                # Remove local copy
-                  rm -rf wordpress/*
+                # Install aws sdk for DynamoDB
+                  until [ -f /var/www/html/vendor/autoload.php ]
+                  do
+                      echo 'Sleep till Composer has been run.' | systemd-cat
+                      export HOME=/root
+                      export COMPOSER_HOME=/var/www/html
+                      composer -d="/var/www/html" require aws/aws-sdk-php
+                      sleep 2
+                  done
                   
-                # Synchronize with S3 (give permissions to uid 33, www-data)
-                  s3fs -o iam_role=auto -ouid=33,gid=33,allow_other $BUCKET wordpress/
-                  
-                # Go back to home dir 
-                  cd ~
-
                 # Configure httpd and restart
-                  # Change a line in httpd config
-                  sed -i "s/DocumentRoot \/var\/www\/html/DocumentRoot \/var\/www\/html\/wordpress/g" /etc/apache2/sites-available/000-default.conf
+                  # Remove index.html
+                  rm -f /var/www/html/index.html
                   # Restart httpd
                   systemctl restart apache2
+                  
+                # Edit site's config.php file
+                  # Put remote on.
+                  sed -i 's@^$remoteData.*@$remoteData = true; # DynamoDB (Altered by sed)@g' /var/www/html/config.php
+                  sed -i 's@^$remoteFiles.*@$remoteFiles = true; # S3 (Altered by sed)@g' /var/www/html/config.php
+                  
+                  # Alter user id
+                  sed -i "s@^\$yourId.*@\$yourId = \"$YOURID\"; # (Altered by sed)@g" /var/www/html/config.php
+                  sed -i "s@^\$awsRegion.*@\$awsRegion = \"$REGION\"; # (Altered by sed)@g" /var/www/html/config.php
+                  sed -i "s@^\$dynamoDBTable.*@\$dynamoDBTable = \"cloudformation-images-\$yourId\"; # (Altered by sed)@g" /var/www/html/config.php
+                  sed -i "s@^\$s3Bucket.*@\$s3Bucket = \"cloudformation-\$yourId\"-bucket; # (Altered by sed)@g" /var/www/html/config.php
 
-                # Complete!
-                  echo -e "Install of packages, upload of Wordpress to bucket, sync with bucket to local fs and Configuration of Apache complete."
+                # Please go to http://
+                  echo -e "Automatic MemeGen installation complete."
+                  echo 'Automatic MemeGen installation complete.' | systemd-cat
               mode: '000755'
               owner: root
               group: root
           commands:
-            01_executeAWSCLI:
-              command: !Sub |
-                /root/InstallAWSCLI.sh
-              cwd: "~"
-            02_executeS3FS:
-              command: !Sub |
-                /root/InstallS3FS.sh
-              cwd: "~"
-            03_executeWORDPRESS:
-              command: "/root/InstallUploadSyncS3.sh \"$BUCKET\" \"$HOST\" \"$USER\" \"$PASS\""
+            01_installMEMEGEN:
+              command: "/root/InstallMemeGen-php-CF.sh \"$ID\" \"$REGION\""
               env:
-                BUCKET: !Ref appS3Bucket
-                HOST: !GetAtt rdsInstance.Endpoint.Address
-                USER: !Ref RDSUsernameParam
-                PASS: !Ref RDSPasswordParam
+                ID: !Ref StudentIdParam
+                REGION: !Ref "AWS::Region"
               cwd: "~"
     Properties:
       IamInstanceProfile: !GetAtt cfnInstanceProfile.Arn
@@ -429,12 +337,7 @@ Resources:
           #!/bin/bash -xe
 
           # Update and install pip and cfn-... commands to trigger asg wait and start executing scripts
-          apt-get update -y 
-          # upgrade was spawning interactive prompts ruining the automation.
-          # apt-get upgrade -y
-          apt-get install -y python-pip
-          pip install --upgrade pip
-          pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
+          apt-get -y update && apt-get -y install python-pip && pip install --upgrade pip && pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
           
           # Start executing scripts defined above
           /usr/local/bin/cfn-init -v \
@@ -460,14 +363,8 @@ Resources:
       TTL: '300'
       ResourceRecords:
       - !GetAtt appElb.DNSName
-
         
 Outputs:
-  RdsEndpointExport:
-    Description: Export of the MySQL endpoint
-    Value: !GetAtt rdsInstance.Endpoint.Address
-    Export:
-      Name: !Sub "CloudFormation-${AWS::StackName}-RDSEndpoint"
   ElbDnsNameExport:
     Description: Export of the Elb endpoint
     Value: !GetAtt appElb.DNSName
