Updated readme's for the scoring server addition

--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -103,7 +103,7 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
-        - PolicyName: !Sub "CloudFormation-${AWS::StackName}-Policies"
+        - PolicyName: !Sub "Cloudformation-${AWS::StackName}-Policies"
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
