Bucket names updated

--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -81,7 +81,7 @@ Resources:
   appS3Bucket:
     Type: "AWS::S3::Bucket"
     Properties:
-      BucketName: !Sub "cloudformation-${StudentIdParam}-bucket"
+      BucketName: !Sub "cloudformation-images-bucket-${StudentIdParam}"
       VersioningConfiguration:
         Status: Suspended
 
