--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -308,7 +308,7 @@ Resources:
                   sed -i "s@^\$yourId.*@\$yourId = \"$YOURID\"; # (Altered by sed)@g" /var/www/html/config.php
                   sed -i "s@^\$awsRegion.*@\$awsRegion = \"$REGION\"; # (Altered by sed)@g" /var/www/html/config.php
                   sed -i "s@^\$dynamoDBTable.*@\$dynamoDBTable = \"cloudformation-images-\$yourId\"; # (Altered by sed)@g" /var/www/html/config.php
-                  sed -i "s@^\$s3Bucket.*@\$s3Bucket = \"cloudformation-\$yourId\"-bucket; # (Altered by sed)@g" /var/www/html/config.php
+                  sed -i "s@^\$s3Bucket.*@\$s3Bucket = \"cloudformation-images-bucket-\$yourId\"; # (Altered by sed)@g" /var/www/html/config.php
 
                 # Please go to http://
                   echo -e "Automatic MemeGen installation complete."
