Add an Id tag to the instance for filtering

--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -205,6 +205,9 @@ Resources:
         - Key: Name
           Value: !Sub "CloudFormation-${AWS::StackName}-AutoscalingGroup"
           PropagateAtLaunch: 'true'
+        - Key: Id
+          Value: !Ref StudentIdParam
+          PropagateAtLaunch: 'true'
       VPCZoneIdentifier: !Ref PublicSubnetsParam
 
     # App LaunchConfiguration
