--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -28,8 +28,8 @@ Parameters:
       - t2.small
   DomainNameParam:
     Type: String
-    Default: "gluo.io" # xpg
-    # Default: "gluo.cloud" # gluoworkshop
+    # Default: "gluo.io" # xpg
+    Default: "gluo.cloud" # gluoworkshop
     Description: Hostname to create Route53 subdomain
   VpcIdParam:
     Type: AWS::EC2::VPC::Id
@@ -258,12 +258,20 @@ Resources:
                   export PATH=$PATH:/usr/sbin/
                   export PATH=$PATH:/sbin
 
-                # Install packages (apache, mongo, php, python and other useful packages)
-                  # Install all
-                  apt-get install -y apache2 composer mongodb mongodb-server php$PHP_VERSION php$PHP_VERSION-dev libapache2-mod-php$PHP_VERSION php-pear pkg-config libssl-dev libssl-dev python3-pip imagemagick wget unzip;
-                  # Mongodb config
-                  pecl install mongodb
+                # Update the server
+                  apt-get update -y && apt-get upgrade -y
+                  apt-get install -y jq
 
+                # Install latest mongodb repo
+                  wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | apt-key add -
+                  echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list
+                  apt-get update -y
+
+                # Install packages (apache, mongo, php, python and other useful packages)
+                  apt-get install -y apache2 composer mongodb-org mongodb-org-server php$PHP_VERSION php$PHP_VERSION-dev libapache2-mod-php$PHP_VERSION php-pear pkg-config libssl-dev libssl-dev python3-pip imagemagick wget unzip;
+
+                # Mongodb config
+                  pecl install mongodb
                   echo "extension=mongodb.so" >> /etc/php/$PHP_VERSION/apache2/php.ini && echo "extension=mongodb.so" >> /etc/php/$PHP_VERSION/cli/php.ini
 
                 # Pip install meme creation packages and awscli for syncing s3 to local fs
@@ -271,9 +279,9 @@ Resources:
 
                 # Enable and start services
                   # Enable
-                  systemctl enable mongodb apache2
+                  systemctl enable mongod apache2
                   # Start
-                  systemctl start mongodb apache2
+                  systemctl start mongod apache2
                   
                   # Wait for mongod start
                   until nc -z localhost 27017
@@ -297,7 +305,7 @@ Resources:
                   # Enable user credentials security
                   echo "security:" >> /etc/mongod.conf && echo "  authorization: enabled" >> /etc/mongod.conf
                   # Restart the mongodb service
-                  systemctl restart mongodb
+                  systemctl restart mongod
 
                 # Download and install MemeGen
                   # Git clone the repository in your home directory
