--- a/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
+++ b/Lab 8 - Cloudformation (infra 2.0)/cloudformation-application-create.yml
@@ -309,7 +309,7 @@ Resources:
 
                 # Download and install MemeGen
                   # Git clone the repository in your home directory
-                  git clone --single-branch --branch 2020-version https://github.com/gluobe/memegen-webapp-aws.git ~/memegen-webapp
+                  git clone https://github.com/gluobe/memegen-webapp-aws.git ~/memegen-webapp
                   # Clone the application out of the repo to the web folder.
                   cp -r ~/memegen-webapp/* /var/www/html/
                   # Set permissions for apache
